# personalized-radio-station

./: .env.example  .gitignore  README.md  config.example.yaml  generate_episode.py  index.html  landing.html  package.json  pnpm-lock.yaml  pyproject.toml  radio.html  radio.jsx  radio_test.html  stations.js  styles.css  vibeFM_radio.html  vibefm.sqlite3
backend/: config.example.yaml  pyproject.toml
backend/src/personalized_radio_station/: ai.py  env.py  hosts.py  news.py  script.py  timing.py  tts.py  vibes.py  weather.py  web_server.py
backend/tests/: test_audio.py  test_config.py  test_hosts.py  test_script.py  test_vibes.py  test_web_server.py
design/landing-archive/: landing-v1.html
design/listen-surface/: variant-A-mid-century.html  variant-B-walkman.html  variant-C-winamp.html  variant-D-bauhaus.html
docs/superpowers/plans/: 2026-05-09-console-7-mvp.md
docs/superpowers/specs/: 2026-05-09-console-7-mvp-design.md
frontend/: Console-7 Radio.html  colors_and_type.css  index.html  landing.html  package.json  radio.jsx  styles.css  vite.config.js
frontend/src/: tailwind.css
src/personalized_radio_station/: ai.py  audio.py  cli.py  config.py  news.py  pipeline.py  runtime.py  script.py  sources.py  timing.py  tts.py  vibes.py  web_server.py
src/personalized_radio_station.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ai.py  test_audio.py  test_cli.py  test_config.py  test_news.py  test_pipeline.py  test_runtime.py  test_script.py  test_sources.py  test_tts.py  test_vibes.py  test_web_server.py
